<resources>
    <string name="app_name">Learn Code Online UI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>
