<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="25dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/dark_logo"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?attr/hint_color">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:backgroundTint="@color/colorPrimary"
            android:digits=".-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@"
            android:drawablePadding="15sp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/text_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?attr/hint_color"
        sothree:passwordToggleEnabled="true"
        sothree:passwordToggleTint="?attr/toggle_color">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:backgroundTint="@color/colorPrimary"
            android:digits="._ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@#$&amp;"
            android:drawablePadding="15sp"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/text_color" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_back"
        android:text="@string/sign_up"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:text="@string/already_have_an_account"
            android:textColor="?attr/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>